resurrect "gradle run"; attempt to fix Windows loayout of the About dialog