@@ -20,6 +20,11 @@ ext.javafxVersion = '14.0.1'
 application {
     mainClassName = 'net.yudichev.googlephotosupload.ui.Launcher'
     applicationName = 'Jiotty Photos Uploader'
+    applicationDefaultJvmArgs = ['--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+                                 '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+                                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+                                 '--add-exports', 'javafx.graphics/com.sun.javafx.menu=ALL-UNNAMED']
 }
 
 String clientSecretPath = readEnvOrNull('CLIENT_SECRET_PATH')
